[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["jayanra <yanzonjavier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
hopsworks = {version = "3.4.2", python = ">=3.9,<3.11"}
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
requests = "^2.31.0"
tqdm = "^4.66.1"
plotly = "^5.16.1"
scikit-learn = "^1.3.0"
xgboost = "^1.7.6"
lightgbm = "^4.0.0"
optuna = "^3.3.0"
wget = "^3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
